--- a/css/styles.css
+++ b/css/styles.css
@@ -28,29 +28,34 @@ li, a, button{
 }
 
 header{
-    display: block;
-    text-align: center;
-    padding: 35px;
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 4rem;
+}
 
 ul li a{
-    margin: 10px;
+    text-decoration: none;
+    }
+ul li{
+    list-style-type: none;
+}
+
+.navBar{
+    font-family: Montserrat;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    column-gap: 2.5rem;
+    height: 100%;
+    align-items: center;
 }
 
 .mainText{
     min-height: 88.5vh;
     z-index: 1;
 }
-.navBar{
-    list-style: none;
-    
-}
-
-.navBar li{
-    display:inline-block;
-    padding: 0px 20px;
-    }
-
     .navBar li a{
         transition: all 0.1s ease 0s;
     }
